RESOLVED FIXED54126
AX: accessibilityShouldUseUniqueId doesn't need to be in the core AX object
https://bugs.webkit.org/show_bug.cgi?id=54126
Summary AX: accessibilityShouldUseUniqueId doesn't need to be in the core AX object
chris fleizach
Reported 2011-02-09 11:37:45 PST
accessibilityShouldUseUniqueId is a Mac only concept. It doesn't need to be in the WebCore AX object
Attachments
Patch (2.03 KB, patch)
2011-02-09 11:42 PST, chris fleizach
darin: review+
chris fleizach
Comment 1 2011-02-09 11:42:14 PST
chris fleizach
Comment 2 2011-02-09 11:49:44 PST
Note You need to log in before you can comment on or make changes to this bug.