AX: accessibilityShouldUseUniqueId doesn't need to be in the core AX object https://bugs.webkit.org/show_bug.cgi?id=54126

Reviewed by Darin Adler.

This is a Mac-only accessibility API concept and doesn't belong in the core AX object.

* accessibility/AccessibilityObject.h:
(WebCore::AccessibilityObject::node):
* accessibility/mac/AccessibilityObjectWrapper.mm:
(-[AccessibilityObjectWrapper accessibilityShouldUseUniqueId]):



Canonical link: https://commits.webkit.org/68143@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@78098 268f45cc-cd09-0410-ab3c-d52691b4dbfc